Fix log point panel white-space collapsing behavior in Firefox (#8324)

--- a/packages/bvaughn-architecture-demo/components/sources/PointPanel.module.css
+++ b/packages/bvaughn-architecture-demo/components/sources/PointPanel.module.css
@@ -97,7 +97,7 @@
   height: 0.5rem;
 }
 .Content [data-test-name="PointPanel-ContentInput"] {
-  white-space: nowrap !important;
+  white-space: pre !important;
 }
 
 .AddConditionButton,
